# ray-tracing-rs

./: Cargo.toml  README.md  test.ppm
src/: camera.rs  collide.rs  color.rs  main.rs  material.rs  ray.rs  vector.rs  world.rs
