[package]
name = "ray-tracing"
version = "0.1.0"
authors = ["Nils Olsson <nilso@enosis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
progress = "0.2.0"
nalgebra = "0.21.1"
rand = "0.7.3"
num-traits = "0.2.12"
num = "0.3.0"